fast_gpio: driver support on esp32c3

--- a/components/driver/CMakeLists.txt
+++ b/components/driver/CMakeLists.txt
@@ -67,6 +67,7 @@ if(IDF_TARGET STREQUAL "esp32c3")
     list(APPEND srcs "gdma.c"
                      "spi_slave_hd.c"
                      "adc_common.c"
+                     "dedic_gpio.c"
                      "usb_serial_jtag.c"
                      "esp32c3/adc.c"
                      "esp32c3/adc2_init_cal.c"
@@ -77,6 +78,7 @@ if(IDF_TARGET STREQUAL "esp32h2")
     list(APPEND srcs "gdma.c"
                      "spi_slave_hd.c"
                      "adc_common.c"
+                     "dedic_gpio.c"
                      "esp32h2/adc.c"
                      "esp32h2/adc2_init_cal.c"
                      "esp32h2/rtc_tempsensor.c")
