tools/idf_size: improve readability

--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -183,6 +183,7 @@
 /tools/cmake/                 @esp-idf-codeowners/build-config
 /tools/esp_prov/              @esp-idf-codeowners/app-utilities
 /tools/find_build_apps/       @esp-idf-codeowners/ci
+/tools/idf_size_yaml/         @esp-idf-codeowners/peripherals
 /tools/kconfig*/              @esp-idf-codeowners/build-config
 /tools/ldgen/                 @esp-idf-codeowners/build-config
 /tools/mass_mfg/              @esp-idf-codeowners/app-utilities
