update touch with review advice

--- a/components/driver/CMakeLists.txt
+++ b/components/driver/CMakeLists.txt
@@ -61,7 +61,7 @@ if(${target} STREQUAL "esp32s3")
                      "usb_serial_jtag.c"
                      "spi_slave_hd.c"
                      "touch_sensor_common.c"
-                     "esp32s2/touch_sensor.c" # The touch sensor function is the same as the esp32s2 platform.
+                     "esp32s3/touch_sensor.c"
                     )
 endif()
 
