--- a/components/tinyusb/Kconfig
+++ b/components/tinyusb/Kconfig
@@ -112,6 +112,13 @@ menu "TinyUSB Stack"
                 default "Espressif HID Device"
                 help
                     Name of the HID device
+
+            config TINYUSB_DESC_ECM_STRING
+                depends on TINYUSB_NET_ENABLED
+                string "CDC-ECM Descriptor String"
+                default "TinyUSB Network"
+                help
+                    Name of the Ethernet over USB device
         endmenu # "Descriptor configuration"
 
         menu "Massive Storage Class (MSC)"
@@ -150,6 +157,14 @@ menu "TinyUSB Stack"
                 help
                     CDC FIFO size of TX channel.
         endmenu # "Communication Device Class"
+
+        config TINYUSB_NET_ENABLED
+            bool "Enable Ethernet over USB TinyUSB driver"
+            default n
+            depends on TINYUSB
+            help
+                Enable Ethernet over USB TinyUSB driver.
+    
     endif # TINYUSB
 
 endmenu # "TinyUSB Stack"
