Adapted makefile that cdc-ecm sources are only build if ethernet over usb is enabled.

--- a/components/tinyusb/CMakeLists.txt
+++ b/components/tinyusb/CMakeLists.txt
@@ -48,18 +48,14 @@ if(CONFIG_TINYUSB)
         "tinyusb/src/class/midi/midi_device.c"
         "tinyusb/src/class/msc/msc_device.c"
         "tinyusb/src/class/vendor/vendor_device.c"
-        "tinyusb/src/class/net/net_device.c"
         "tinyusb/src/common/tusb_fifo.c"
         "tinyusb/src/device/usbd_control.c"
         "tinyusb/src/device/usbd.c"
         "tinyusb/src/tusb.c"
-        "tinyusb/lib/networking/rndis_reports.c"
         "additions/src/descriptors_control.c"
         "additions/src/tinyusb.c"
         "additions/src/tusb_tasks.c"
         "additions/src/usb_descriptors.c"
-        "additions/src/esp_cdc_ecm_driver.c"
-        "additions/src/esp_cdc_ecm_netif_glue.c"
         )
 
     # when no builtin class driver is enabled, an uint8_t data compared with `BUILTIN_DRIVER_COUNT` will always be false
@@ -73,6 +69,16 @@ if(CONFIG_TINYUSB)
             "additions/src/vfs_tinyusb.c"
             )
     endif() # CONFIG_TINYUSB_CDC_ENABLED
+
+    if(CONFIG_TINYUSB_NET_ENABLED)
+        list(APPEND srcs
+            "tinyusb/src/class/net/net_device.c"
+            "tinyusb/lib/networking/rndis_reports.c"
+            "additions/src/esp_cdc_ecm_driver.c"
+            "additions/src/esp_cdc_ecm_netif_glue.c"
+            )
+    endif() # CONFIG_TINYUSB_CDC_ENABLED
+
 endif() # CONFIG_TINYUSB
 
 idf_component_register(SRCS ${srcs}
