--- a/.gitlab/ci/host-test.yml
+++ b/.gitlab/ci/host-test.yml
@@ -363,3 +363,10 @@ test_cxx_gpio:
     - cd ${IDF_PATH}/examples/cxx/experimental/experimental_cpp_component/host_test/gpio
     - idf.py build
     - build/test_gpio_cxx_host.elf
+
+test_linux_example:
+  extends: .host_test_template
+  script:
+    - cd ${IDF_PATH}/examples/build_system/cmake/linux_host_app
+    - idf.py build
+    - build/linux_host_app.elf
