lcd: add lvgl demo ui

--- a/examples/peripherals/lcd/lvgl/main/CMakeLists.txt
+++ b/examples/peripherals/lcd/lvgl/main/CMakeLists.txt
@@ -1,2 +1,4 @@
-idf_component_register(SRCS "lvgl_example_main.c" "lvgl_demo_ui.c"
+file(GLOB_RECURSE IMAGE_SOURCES images/*.c)
+
+idf_component_register(SRCS "lvgl_example_main.c" "lvgl_demo_ui.c" ${IMAGE_SOURCES}
                        INCLUDE_DIRS ".")
