openthread: update openthread submodule
openthread: add srp client enable option for openthread component

ieee802154: set ieee802154 default PTI to 6

--- a/components/openthread/Kconfig
+++ b/components/openthread/Kconfig
@@ -77,6 +77,14 @@ menu "OpenThread"
             Select this option to enable Joiner in OpenThread. This allows a device to join the Thread network with a
             pre-shared key using the Thread commissioning protocol.
 
+    config OPENTHREAD_SRP_CLIENT
+        bool "Enable SRP Client"
+        depends on OPENTHREAD_ENABLED
+        default n
+        help
+            Select this option to enable SRP Client in OpenThread. This allows a device to register SRP services to SRP
+            Server.
+
     config OPENTHREAD_BORDER_ROUTER
         bool "Enable Border Router"
         depends on OPENTHREAD_ENABLED
