--- a/components/esp_system/Kconfig
+++ b/components/esp_system/Kconfig
@@ -100,6 +100,15 @@ menu "ESP System Settings"
             If enabled, the CPU will be powered down in light sleep. Enabling this option will consume
             1.68 KB of internal RAM and will reduce sleep current consumption by about 100 uA.
 
+    config ESP_SYSTEM_PSRAM_LEAKAGE_WORKAROUND
+        bool "PSRAM leakage current workaround in light sleep"
+        depends on SPIRAM
+        help
+            When the CS pin of SPIRAM is not pulled up, the sleep current will
+            increase during light sleep. If the CS pin of SPIRAM has an external
+            pull-up, you do not need to select this option, otherwise, you
+            should enable this option.
+
     menu "Memory protection"
 
         config ESP_SYSTEM_MEMPROT_FEATURE
