--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ setuptools>=21
 click>=5.0
 pyserial>=3.0
 future>=0.15.2
-cryptography>=2.1.4
+cryptography>=2.1.4,<35
 pyparsing>=2.0.3,<2.4.0
 pyelftools>=0.22
 
