ci: add idf size mem region yamls to host test pattern

--- a/.gitlab/ci/rules.yml
+++ b/.gitlab/ci/rules.yml
@@ -115,6 +115,7 @@
   - "tools/test_idf_py/**/*"
 
   - "tools/idf_size.py"
+  - "tools/idf_size_yaml/*"
   - "tools/test_idf_size/**/*"
 
   - "tools/tools.json"
